--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,10 +20,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="/">Home</a>
             <a class="nav-item nav-link" href="/user/">Authors</a>
             <a class="nav-item nav-link" href="#">About</a>
             <a class="nav-item nav-link" href="/login">Login</a>
+            <a class="nav-item nav-link" href="/logout">Logout</a>
+            <a class="nav-item nav-link" href="/sign_up">Sign up</a>
         </div>
         </form>
     </div>
