Changed HTML views

--- a/src/main/resources/templates/auth/successful_registration.html
+++ b/src/main/resources/templates/auth/successful_registration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<p>Congratulations! You have created a new Bloogy account!</p>
+<p>Congratulations! You have created a new Bloggy account!</p>
 
 </div>
 
