--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
             <a class="nav-item nav-link" href="#">About</a>
             <a class="nav-item nav-link" href="/login">Login</a>
             <a class="nav-item nav-link" href="/logout">Logout</a>
-            <a class="nav-item nav-link" href="/sign_up">Sign up</a>
+            <a class="nav-item nav-link" href="/registration">Sign up</a>
         </div>
         </form>
     </div>
