--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Sign up</h1>
-<form action="/sign_up" th:object="${user}" method="POST" enctype="utf8">
+<form action="/registration" th:object="${user}" method="POST" enctype="utf8">
     <div>
         <label>Username</label>
         <input th:field="*{username}"/>
